testdata/golden/sema/valid/module_multitest/point.sg
pub fn point() -> string {
    return "point";
}
