testdata/golden/sema/invalid/trivial_self_call.sg
fn f(x: int) -> int {
    return f(x);
}
